# soap_testing

./: LICENSE  Python_Zeep_testing_SOAP.ipynb  Ruby_Savon_testing_SOAP.ipynb  pyproject.toml  tags
